Handle CSSPropertyBoxSizing in CSSStyleApplyProperty. https://bugs.webkit.org/show_bug.cgi?id=80001

Reviewed by Andreas Kling.

No new tests / refactoring only.

* css/CSSStyleApplyProperty.cpp:
(WebCore::CSSStyleApplyProperty::CSSStyleApplyProperty):
* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::collectMatchingRulesForList):


Canonical link: https://commits.webkit.org/97152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109472 268f45cc-cd09-0410-ab3c-d52691b4dbfc